# crates_cli

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs
.github/workflows/: rust-clippy.yml
man/: cargo-crate.1  cargo.1  crate-find.1  crate-show.1  crate.1  find.1  show.1
src/: cli.rs  main.rs  util.rs
src/cli/: exec.rs  mod.rs  setup.rs
src/commands/: deps.rs  find.rs  mod.rs  search.rs  show.rs  versions.rs
src/util/: config.rs  crates.rs  error.rs  loader.rs  mod.rs  table.rs  terminal.rs
